# temporal_video_analysis

./: .gitignore  pyproject.toml
backend/: db.py  dependencies.py  main.py
backend/core/: config.py  security.py
backend/models/: message.py  user.py
backend/routers/: auth.py  chat.py  users.py
backend/utils/: time_extraction.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
frontend/src/components/: Chat.jsx  EditProfile.jsx  Navbar.jsx  PageTransition.tsx  SearchChat.jsx  Sidepanel.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: Chat.jsx  NotFound.jsx  login.jsx  signup.jsx
frontend/src/routes/: PublicRoute.jsx
video_analytics/scripts/: main.py
video_analytics/scripts/utils/: color_utils.py  mongo_utils.py
